# claude-mv

./: .gitignore  README.md  claude-mv.bat  claude-mv.ps1  claude-mv.sh  claude-storage-research.md  claudepath-analysis.md  pyproject.toml  tool-spec.md
claude_mv/: inventory.py  main.py  migrate.py  paths.py  safety.py  ui.py
