[project]
name = "claude-mv"
version = "0.1.0"
description = "Move a project folder and migrate its Claude Code session storage."
requires-python = ">=3.10"
authors = [{ name = "derDere" }]

[project.scripts]
claude-mv = "claude_mv.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_mv"]
